# t2

./: README.md  index.html  package-lock.json  package.json  rsbuild.config.ts  rsw.toml  vite.config.js
.github/workflows/: publish.yml  release.yml  release2.yml
.rsw/: rsw.crates
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BatteryPanel.vue  CpuPanel.vue  DiskPanel.vue  Home.vue  MemPanel.vue  NetPanel.vue  ProcessesPanel.vue  SysPanel.vue
