[package]
name = "t2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.dev]
incremental = true

[build]
rustc-wrapper = "/path/to/sccache"
rustflags = ["-Z", "threads=8"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sccache = "0.8.2"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde_json = "1"
serde = "1.0.213"
sysinfo = "0.32.0"
battery = "0.7.8"
window-vibrancy = "0.5.2"
window-shadows = "0.2.2"

